# just_merge

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
capabilities/: default.json
src/: lib.rs  store.rs  tray.rs
src/pubsub/: gitlab.rs  mod.rs  redis_cli.rs
ui/: index.html
ui/assets/: colorization.css  colorization.js  custom.css  popup.css  status_bar.js  vanilla-framework-version-4.21.0.min.css
