[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.83.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.3.1", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"

# utilities
chrono = "0.4"
inline_colorization = "0.1"
crossbeam = { version = "0.8", features = [] }

tokio = { version = "1.44", features = ["sync", "macros"] }
redis = { version = "0.29", features = ["tokio-comp", "connection-manager"] }
